--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto recusandae aliquid quo eligendi earum et iusto? Dolorem esse dolorum ipsum libero consequatur placeat dicta harum vitae ratione, at unde ad!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus illo eos sit debitis facilis adipisci repellat possimus quam blanditiis itaque laudantium consectetur necessitatibus, excepturi labore aspernatur ipsam vero, soluta quaerat?</p>
         </article>
     </main>
 </body>
